# scale_detection_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ObjectDetector.hpp  utils.hpp
src/: ObjectDetector.cpp
